--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
     color: #424242;
 }
 .text-light-gray{
-    color: #727272
+    color: #727272;
 }
 .nav-item{
     list-style: none;
@@ -64,8 +64,55 @@
 .banner-img{
     width: 100%;
 }
+
+body{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+main>section{
+    margin-top: 130px;
+}
+.teams{
+    align-items:center ;
+}
+.team-img-container{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 24px;
+}
+
+.our-features{
+    margin-left: 130px;
+    max-width: 540px;
+}
+.feature-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+.feature-description .text-light-gray{
+    font-size: 1rem;
+    
+}
+#fea{
+   color: rgba(255, 144, 14, 1);
+}
+#quick{
+    color: #727272;
+    font-weight: 500;
+}
+
+
+
+
+
 @media screen and (max-width:576px){
-    .nav-inside, .navbar{
+    .nav-inside, .navbar .teams{
         flex-direction: column;
+    }
+    .team-img-container{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .our-features{
+        margin-left: 20px;
     }
 }
