--- a/style.css
+++ b/style.css
@@ -189,7 +189,19 @@ main>section{
 .archi-img{
     width: 100%;
 }
-
+footer{
+    max-height: 100px;
+    background-color: rgba(255, 244, 231, 1);
+}
+.footerwork{
+    padding-top: 20px;
+    padding-bottom: 40px;
+    text-align: center;
+    border-radius: 8px;
+}
+.foot{
+    font-size: 20px;
+}
 
 
 
